// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the Login component Should set email and password values 1`] = `
<DocumentFragment>
  <ion-content>
    <form>
      <ion-item>
        <ion-label>
          Email
        </ion-label>
        <ion-input
          name="eMail"
          title="eMail"
          type="email"
          value="test@home.com"
        />
      </ion-item>
      <ion-item>
        <ion-label>
          Password
        </ion-label>
        <ion-input
          name="password"
          title="password"
          type="password"
          value="12345"
        />
      </ion-item>
      <ion-button
        color="primary"
        type="submit"
      >
        Login
      </ion-button>
    </form>
  </ion-content>
</DocumentFragment>
`;

exports[`the Login component renders the empty login page 1`] = `
<DocumentFragment>
  <ion-content>
    <form>
      <ion-item>
        <ion-label>
          Email
        </ion-label>
        <ion-input
          name="eMail"
          title="eMail"
          type="email"
          value=""
        />
      </ion-item>
      <ion-item>
        <ion-label>
          Password
        </ion-label>
        <ion-input
          name="password"
          title="password"
          type="password"
          value=""
        />
      </ion-item>
      <ion-button
        color="primary"
        type="submit"
      >
        Login
      </ion-button>
    </form>
  </ion-content>
</DocumentFragment>
`;
